tests/compile-fail/could-not-infer.stderr
error: Nom-derive: could not get first path ident
 --> $DIR/could-not-infer.rs:7:8
  |
7 |     a: [u32; 4],
  |        ^^^^^^^^
